--- a/README
+++ b/README
@@ -1,6 +1,1 @@
-This Code of Conduct was approved by the members of the
-Python Software Foundation during the April 2013 vote, completed on
-19 April, 2013.
-
-Changes to this document must be approved by the PSF's Board of Directors,
-who can be reached at psf-board@python.org.
+Kode etik Komunitas Python ID diturunkan dari [Python Community Code of Conduct](https://www.python.org/psf/codeofconduct/)
